# holiday-itinerary

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.airflow.yaml  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: development.yaml
docs/: backend-architecture.md  cities-roads-dataset.md  data-import.md  data-structure.md  development.md  frontend-architecture.md  production.md
src/backend/dataset_import/: __init__.py  cleanup.py  handler.py  neo4j_load.py  pipeline.py  status_handler.py
src/backend/neo4j_api/: main.py
src/backend/neo4j_api/routes/: city.py  data_update.py  dijkstra.py  distance.py  poi.py  travel.py  tsp.py
src/backend/neo4j_driver/: __init__.py  base.py  city.py  city_poi.py  neo4j_driver.py  poi.py  tsp.py
src/backend/transformation/: __init__.py  datatourisme.py  french_cities.py
src/frontend/: streamlit_app.py
src/frontend/ui/: __init__.py  config.py  layout.py  session_states.py  ui.py  utils.py
src/frontend/ui/handlers/: __init__.py  add_poi.py  delete_poi.py  get_request.py  itinerary.py  utils.py  validators.py
src/frontend/ui/widgets/: map.py  (+5 more)
src/logger/: logger.py
src/scripts/: init-db.sh  post-init-dev.sh  post-init.sh  transform_datatourisme.py
tests/: conftest.py  run_api_test_server.py
tests/backend/: conftest.py  test_city.py  test_dijkstra.py  test_distance.py  test_poi.py  test_travel.py  test_tsp.py
tests/data/: france_pois.csv
tests/data/bulk/: import-script.sh
tests/frontend/: conftest.py
tests/frontend/handlers/: test_add_poi.py  test_delete_poi.py  test_get_request.py  test_itinerary.py  test_utils.py  test_validators.py
tests/frontend/widgets/: test_controls.py  test_map.py  test_poi_overview.py  test_pois_overview.py
